# qdrantgprctest

./: Cargo.toml
src/: main.rs
